Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-284

MiNiFi crashes if invalid processor is specified

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.3.0
    • None

    Description

      If an invalid processor is specified in the yml, MiNiFi identifies this, but it ends up with a segmentation fault.

      [2017-11-03 11:11:40.653] [org::apache::nifi::minifi::FlowController] [info] Load Flow Controller from file /home/achristianson/workspace/minifi-flow-2017-10-25/conf/config.yml
      [New Thread 0x7fffdeffd700 (LWP 25910)]
      [New Thread 0x7fffde7fc700 (LWP 25911)]
      [New Thread 0x7fffddffb700 (LWP 25912)]
      [New Thread 0x7fffdd7fa700 (LWP 25913)]
      [New Thread 0x7fffdcff9700 (LWP 25914)]
      [2017-11-03 11:11:40.654] [org::apache::nifi::minifi::core::ProcessGroup] [info] ProcessGroup MiNiFi Flow created
      [2017-11-03 11:11:40.654] [org::apache::nifi::minifi::core::FlowConfiguration] [error] No Processor defined for UnkonwnProcesor
      [New Thread 0x7fffd7fff700 (LWP 25916)]
      [New Thread 0x7fffd77fe700 (LWP 25917)]
      [New Thread 0x7fffd6ffd700 (LWP 25915)]
      [New Thread 0x7fffd67fc700 (LWP 25920)]
      [New Thread 0x7fffd57fa700 (LWP 25919)]
      [New Thread 0x7fffd5ffb700 (LWP 25921)]
      [New Thread 0x7fffd4ff9700 (LWP 25918)]
      
      Thread 1 "minifi" received signal SIGSEGV, Segmentation fault.
      0x000000000068ecde in org::apache::nifi::minifi::core::FlowConfiguration::createProcessor(std::string, unsigned char*) ()
      Missing separate debuginfos, use: debuginfo-install boost-filesystem-1.53.0-27.el7.x86_64 boost-system-1.53.0-27.el7.x86_64 bzip2-libs-1.0.6-13.el7.x86_64 cyrus-sasl-lib-2.1.26-21.el7.x86_64 elfutils-libelf-0.168-8.el7.x86_64 elfutils-libs-0.168-8.el7.x86_64 keyutils-libs-1.5.8-3.el7.x86_64 krb5-libs-1.15.1-8.el7.x86_64 libacl-2.2.51-12.el7.x86_64 libarchive-3.1.2-10.el7_2.x86_64 libattr-2.4.46-12.el7.x86_64 libcap-2.22-9.el7.x86_64 libcom_err-1.42.9-10.el7.x86_64 libcurl-7.29.0-42.el7.x86_64 libgcc-4.8.5-16.el7.x86_64 libidn-1.28-4.el7.x86_64 libpng-1.5.13-7.el7_2.x86_64 libselinux-2.5-11.el7.x86_64 libssh2-1.4.3-10.el7_2.1.x86_64 libstdc++-4.8.5-16.el7.x86_64 libusbx-1.0.20-1.el7.x86_64 libuuid-2.23.2-43.el7.x86_64 libxml2-2.9.1-6.el7_2.3.x86_64 lua-5.1.4-15.el7.x86_64 lzo-2.06-8.el7.x86_64 nspr-4.13.1-1.0.el7_3.x86_64 nss-3.28.4-12.el7_4.x86_64 nss-softokn-freebl-3.28.3-8.el7_4.x86_64 nss-util-3.28.4-3.el7.x86_64 openldap-2.4.44-5.el7.x86_64 openssl-libs-1.0.2k-8.el7.x86_64 pcre-8.32-17.el7.x86_64 python-libs-2.7.5-58.el7.x86_64 systemd-libs-219-42.el7_4.1.x86_64 xz-libs-5.2.2-1.el7.x86_64 zlib-1.2.7-17.el7.x86_64
      (gdb) bt
      #0  0x000000000068ecde in org::apache::nifi::minifi::core::FlowConfiguration::createProcessor(std::string, unsigned char*) ()
      #1  0x00000000006b1e80 in org::apache::nifi::minifi::core::YamlConfiguration::parseProcessorNodeYaml(YAML::Node, org::apache::nifi::minifi::core::ProcessGroup*) ()
      #2  0x0000000000688add in org::apache::nifi::minifi::core::YamlConfiguration::getRoot(YAML::Node*) ()
      #3  0x0000000000688e65 in org::apache::nifi::minifi::core::YamlConfiguration::getRoot(std::string const&) ()
      #4  0x00000000006cc145 in org::apache::nifi::minifi::FlowController::load() ()
      #5  0x0000000000563fac in main ()
      

      Attachments

        Issue Links

          Activity

            People

              achristianson Andrew Christianson
              achristianson Andrew Christianson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: