MINIFICPP-284 Handle processor configuration errors better